--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "ScreenRec Pro",
+    "name": "ScreenRec Pro v2",
     "short_name": "ScreenRec",
     "start_url": "./index.html",
     "display": "standalone",
